# crab-code

./: README.md  package.json  turbo.json
apps/server/: .env.example  .gitignore  Cargo.toml  docker-compose.yml  package.json
apps/server/migrations/: 20250811161549_init.sql  20250812132257_test_seed.sql  20250812194856_execution_logs.sql
apps/server/src/: app.rs  lib.rs  main.rs  server.rs
apps/server/src/common/: config.rs  error.rs  hash.rs  mod.rs  response.rs  state.rs
apps/server/src/domains/user/domain/: repository.rs
apps/server/src/errors/: auth.rs  judge.rs  mod.rs  repository.rs  service.rs
apps/server/src/handlers/: judge.rs  language.rs  mod.rs  problem.rs  submission.rs  tag.rs  test_case.rs  user.rs
apps/server/src/models/: auth.rs  judge.rs  language.rs  mod.rs  problem.rs  submission.rs  tag.rs  test_case.rs  user.rs
apps/server/src/repositories/: judge.rs  language.rs  mod.rs  problem.rs  submission.rs  tag.rs  test_case.rs  user.rs
apps/server/src/routes/: language.rs  mod.rs  problem.rs  submission.rs  tag.rs  test_case.rs  user.rs
apps/server/src/services/: auth.rs  judge.rs  language.rs  mod.rs  problem.rs  stats.rs  submission.rs  tag.rs  test_case.rs  user.rs
apps/web/: biome.json  index.html  package.json
apps/web/src/: main.tsx
apps/web/src/components/: header.tsx
apps/web/src/routes/: __root.tsx  index.tsx
