[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-native-tls",
  "chrono",
  "uuid",
] }
dotenvy = "0.15.7"
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
async-trait = "0.1.88"
